# FacultySchedulingSystem_WonderTeam_Group2

./: .gitignore  CMakeLists.txt  README.md  Text.cpp  role.cpp.h  role.h
Headers/: Role.h  menu.h  role.h  user.h
Source/: UserInfo.txt  UserInfos.txt  main.cpp  menu.cpp  role.cpp.h  user.cpp
Source files/: role.cpp.h  user.cpp
checkPermission/: user.cpp  user.h
user_stories/: CMPT-2276 user stories.md
